--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">NotesApp</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="def_text_enter_description">Enter description</string>
+    <string name="def_text_enter_note_title">Enter Note Title</string>
+    <string name="def_text_save_notes">Save Notes</string>
 </resources>
