--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="def_text_enter_description">Enter description</string>
     <string name="def_text_enter_note_title">Enter Note Title</string>
     <string name="def_text_save_notes">Save Notes</string>
+    <string name="no_db_text">No data found</string>
 </resources>
