--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="def_text_enter_note_title">Enter Note Title</string>
     <string name="def_text_save_notes">Save Notes</string>
     <string name="no_db_text">No data found</string>
+    <string name="this_is_action_button">This is action button</string>
 </resources>
